--- a/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.html
+++ b/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.html
@@ -1,11 +1,7 @@
 <div class="modal">
     <div class="product-modal">
         <div class="title-container">
-
-            <div class="title-title">
-                <h1>{{product?.name}}</h1>
-            </div>
-
+            <h1 class="product-title">{{product.name}}</h1>
             <div class="slideshow">
                 <img src="../../../assets/images/people.jpg"/>
                 <i class="material-icons">keyboard_arrow_left</i>
@@ -36,7 +32,7 @@
                     <mat-tab label="Tech specs">
                         <div class="details">
                             <h1>Tech specs</h1>
-                            {{product?.spec}}
+                            <div [innerHtml]="product.specString"></div>
                         </div>
                     </mat-tab>
                     <mat-tab label="Benefits">
