--- a/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.scss
+++ b/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.scss
@@ -11,6 +11,10 @@
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
 
+  .icon-close{
+    cursor: pointer;
+  }
+
   .details {
    // padding: 2% 10%;
     h1 {
@@ -20,9 +24,9 @@
     }
   }
   .product-modal {
-    padding: 10px;
+    border-radius: 15px 15px 15px 15px;
     background-color: white;
-    width: 60%;
+    width: 85%;
     height: auto;
     position: fixed;
     left: 50%;
@@ -30,26 +34,36 @@
     transform: translate(-50%, -50%);
     display: flex;
     flex-direction: row;
-    border-radius: 2.5px;
-
+    overflow: hidden;
     .title-container {
       display: flex;
       flex-direction: column;
       align-items: center;
-      flex: 1;
+      flex: 2;
+      position: relative;
 
       h1 {
-        padding: 0;
-        margin: 5px 0;
+        position: absolute;
+        top: 0;
+        padding: 2px;
+        text-align: center;
+        margin: 10px;
         text-transform: uppercase;
-        font-size: 2em;
+        color: white;
+        font-size: 1.5em;
+        z-index: 1000;
+        left: 0;
+        background-color: $main-color;
 
       }
 
       .slideshow {
         position: relative;
-        height: fit-content;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
         img {
+          height: 100%;
           width: 100%;
           border-radius: 2.5px;
           box-shadow: 7px 7px 21px -5px rgba(0, 0, 0, 0.75);
@@ -69,7 +83,7 @@
         i {
           color: $main-color;
           text-shadow: 4px 4px 30px rgba(0, 0, 0, 1);
-          font-size: 100px;
+          font-size: 75px;
           position: absolute;
           top: 50%;
           transform: translateY(-50%);
@@ -99,6 +113,10 @@
         }
       }
     }
+  }
+
+  ::ng-deep .mat-tab-labels{
+    justify-content: space-between !important;
   }
 
   ::ng-deep .mat-tab-label-active {
