--- a/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.scss
+++ b/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.scss
@@ -1,16 +1,22 @@
 @import "../../../../../assets/variables";
 .modal {
-    z-index: 100;
     position: fixed;
     left: 0;
     top: 0;
     width: 100vw;
     height: 100vh;
     overflow: auto;
+    z-index: 3000;
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
     .icon-close {
         cursor: pointer;
+        padding: 15px;
+        font-size: 30px;
+    }
+
+    .benefit-container{
+        padding: 15px 0;
     }
     .details {
         // padding: 2% 10%;
@@ -25,7 +31,7 @@
         border-radius: 15px 15px 15px 15px;
         background-color: white;
         width: 85%;
-        height: auto;
+        height: 75%;
         position: fixed;
         left: 50%;
         top: 50%;
@@ -44,7 +50,7 @@
                 top: 0;
                 padding: 2px;
                 text-align: center;
-                margin: 10px;
+                margin: 20px;
                 text-transform: uppercase;
                 color: white;
                 font-size: 1.5em;
