--- a/src/app/components/products/product-detail/product-detail-mobile/product-detail-mobile.component.html
+++ b/src/app/components/products/product-detail/product-detail-mobile/product-detail-mobile.component.html
@@ -1,49 +1,47 @@
 <div class="modal">
-  <div class="product-modal">
-    <div class="modal-header">
-      <i class="material-icons icon-close" (click)="closeModal()">
-        clear
-      </i>
-    </div>
-    <div class="modal-content">
-      <div class="slideshow">
-        <img src="../../../assets/images/people.jpg" />
-        <!--<div class="arrow"><span>&#x3c;</span></div>-->
-        <!--<div class="arrow"><span>&#x3e;</span></div>-->
-        <i class="material-icons left">keyboard_arrow_left</i>
-        <i class="material-icons right">keyboard_arrow_right</i>
-        <div class="img-banner">{{product?.name}}</div>
-      </div>
-      <div class="product-info">
-        <div class="content-title">
-          <div class="benefit-container">
-            <h1>Suitable for</h1>
-            <span *ngFor="let type of types">{{type.value}}</span>
-          </div>
+    <div class="product-modal">
+        <div class="modal-header">
+            <i class="material-icons icon-close" (click)="closeModal()">
+                clear
+            </i>
         </div>
-        <div class="menu">
-          <mat-tab-group mat-align-tabs="center">
-            <mat-tab label="Description">
-              <div class="details">
-                <h1>Description</h1>
-                  {{product?.description}}
-              </div>
-            </mat-tab>
-            <mat-tab label="Tech specs">
-              <div class="details">
-                <h1>Tech specs</h1>
-                  {{product?.spec}}
-              </div>
-            </mat-tab>
-            <mat-tab label="Benefits">
-              <div class="details">
-                <h1>Benefits</h1>
-                  {{product?.solution?.benefitDescription}}
-              </div>
-            </mat-tab>
-          </mat-tab-group>
+        <div class="modal-content">
+            <div class="slideshow">
+                <div class="benefit-container">
+                    <span *ngFor="let type of types">{{type.value}}</span>
+                </div>
+
+                <img src="../../../assets/images/people.jpg"/>
+                <i class="material-icons left">keyboard_arrow_left</i>
+                <i class="material-icons right">keyboard_arrow_right</i>
+                <div class="img-banner">{{product?.name}}</div>
+            </div>
+            <div class="product-info">
+                <div class="content-title">
+                </div>
+                <div class="menu">
+                    <mat-tab-group mat-align-tabs="center">
+                        <mat-tab label="Description">
+                            <div class="details">
+                                <h1>Description</h1>
+                                {{product?.description}}
+                            </div>
+                        </mat-tab>
+                        <mat-tab label="Tech specs">
+                            <div class="details">
+                                <h1>Tech specs</h1>
+                                <div [innerHtml]="product.specString"></div>
+                            </div>
+                        </mat-tab>
+                        <mat-tab label="Benefits">
+                            <div class="details">
+                                <h1>Benefits</h1>
+                                {{product?.solution?.benefitDescription}}
+                            </div>
+                        </mat-tab>
+                    </mat-tab-group>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </div>
