fix issue footer.

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,11 +1,12 @@
 <footer class="page">
   <img src="../../../assets/images/sticker_round.png" width="150px" height="150px">
   <div class="footer-info">
-    <p>
-      New Crown Service Partners NV/SA
-    </p>
-
     <table>
+      <tr>
+        <td colspan="2">
+          New Crown Service Partners NV/SA
+        </td>
+      </tr>
       <tr>
         <td>
           Gansbroekstraat 27
