--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,17 +1,28 @@
 @import "../../../assets/variables";
 
-footer{
+footer {
   font-size: 12px;
   display: flex;
-  flex-direction: row;
-  align-items: center;
   background-color: $footer-color;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+  }
 
   img{
-    margin: 10px 25px;
-    height: 75px;
-    width: 75px;
+    margin: 10px;
+    height: 50px;
+    width: 50px;
+
+    @media screen and (max-width: 768px) {
+      margin: 10px 0;
+      height: 75px;
+      width: 75px;
+    }
   }
 
   .footer-info{
@@ -19,6 +30,11 @@ footer{
     display: inline-flex;
     justify-content: center;
     font-size: 0.7em;
+
+    .mobile-footer-text {
+      margin-bottom: 10px;
+      font-size: 16px;
+    }
   }
 
   @media (min-width: 768px) {
@@ -32,7 +48,7 @@ footer{
       flex-direction: column;
       display: inline-flex;
       justify-content: center;
-      font-size: 1em;
+      font-size: 15px;
     }
 
   }
