--- a/src/app/pages/products/product.page.scss
+++ b/src/app/pages/products/product.page.scss
@@ -22,7 +22,7 @@
     }
   }
 
-  .product-group{
+  .product-group {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,22 +33,24 @@
       justify-content: space-evenly;
       align-items: center;
 
-      .product-group-container {
-        height: 300px;
-      }
+      // .product-group-container {
+      //   height: 300px;
+      // }
     }
 
 
     .product-group-container {
-      width: 100%;
+      // width: 100%;
       max-width: 300px;
+      flex-basis: 33.33%;
       box-shadow: 7px 7px 21px -5px rgba(0, 0, 0, 0.75);
       display: flex;
       flex-direction: column;
-      margin-bottom: 30px;
+      // margin-bottom: 30px;
       transition: all .2s ease-in-out;
       position: relative;
       height: 500px;
+      margin: 0 15px 30px 15px;
 
       .learn-more-button{
         display: inline;
@@ -73,8 +75,8 @@
         img {
           height: auto;
           width: 100%;
+          padding: 0;
         }
-
       }
 
       .product-group-content {
