--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -7,6 +7,10 @@ footer {
   flex-direction: column;
   align-items: center;
 
+  table {
+    border-spacing: 15px 5px;
+  }
+
   @media screen and (min-width: 768px) {
     justify-content: center;
     flex-direction: row;
