--- a/src/app/components/navigation/desktop-navbar/desktop-navbar.component.scss
+++ b/src/app/components/navigation/desktop-navbar/desktop-navbar.component.scss
@@ -83,7 +83,7 @@ section#desktop-navigation {
         }
 
         a {
-          padding: 10px;
+          padding: 1em;
           font-size: 1.2em;
           font-weight: bold;
           text-decoration: none;
