--- a/src/app/components/navigation/mobile-navigation/mobile-navigation.component.html
+++ b/src/app/components/navigation/mobile-navigation/mobile-navigation.component.html
@@ -24,7 +24,7 @@
                 </div>
             </li>
 
-            <li id="language"><a [ngClass]="{'selected': currentLanguage === 'en'}" (click)="changeTranslation('en')" >ENG</a> | <a [ngClass]="{'selected': currentLanguage === 'fr'}"  (click)="changeTranslation('fr')">FR</a></li>
+            <!-- <li id="language"><a [ngClass]="{'selected': currentLanguage === 'en'}" (click)="changeTranslation('en')" >ENG</a> | <a [ngClass]="{'selected': currentLanguage === 'fr'}"  (click)="changeTranslation('fr')">FR</a></li> -->
         </ul>
 
     </div>
