--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -18,31 +18,31 @@
     <!--</p>-->
     <!--</div>-->
 
-    <div class="quote article">
-        <h1>"YOU DON'T NEED A NEW MACHINE, YOU NEED YOUR MACHINE TO WORK PROPERLY"</h1>
+    <!--<div class="quote article">-->
+        <!--<h1>"YOU DON'T NEED A NEW MACHINE, YOU NEED YOUR MACHINE TO WORK PROPERLY"</h1>-->
 
-        <div class="goal-container">
+        <!--<div class="goal-container">-->
 
-            <div class="goal-item">
-                <mat-icon>settings</mat-icon>
-                <h2>Quality engineering</h2>
-            </div>
+            <!--<div class="goal-item">-->
+                <!--<mat-icon>settings</mat-icon>-->
+                <!--<h2>Quality engineering</h2>-->
+            <!--</div>-->
 
-            <div class="goal-item">
-                <mat-icon>cached</mat-icon>
-                <h2>Reuse</h2>
-            </div>
+            <!--<div class="goal-item">-->
+                <!--<mat-icon>cached</mat-icon>-->
+                <!--<h2>Reuse</h2>-->
+            <!--</div>-->
 
-            <div class="goal-item">
-                <mat-icon>group</mat-icon>
-                <h2>Expertise</h2>
-            </div>
+            <!--<div class="goal-item">-->
+                <!--<mat-icon>group</mat-icon>-->
+                <!--<h2>Expertise</h2>-->
+            <!--</div>-->
 
-        </div>
-    </div>
+        <!--</div>-->
+    <!--</div>-->
     <div #ourVision class="article image-text">
         <img src="../../../assets/images/default-placeholder.jpg">
-        <div>
+        <div class="content">
             <h2>Restore beyond design performance</h2>
             <p>NEW CROWN offers solutions to modernize and upgrade existing Returnable Glass Bottling equipment, not
                 only to
@@ -97,7 +97,7 @@
 
     <div class="article image-text">
         <img src="../../../assets/images/default-placeholder.jpg" *ngIf="isMobile">
-        <div>
+        <div class="content">
             <h2>STRONG TEAM</h2>
             <p>
                 The NCSP team is a great mix of seasoned experience and young enthusiasm, of proven solutions and new
