--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -5,6 +5,7 @@ $fourth-color: #DCC7AA;
 $footer-color: #DEDFE2;
 $card-background-color: #F7F8F9;
 $nav-bar-height: 125px;
+$nav-bar-height-mobile: 75px;
 $nav-bar-color: #999997;
 $light-grey: #F5F5F5;
 $filler-color: #07DDEC;
