--- a/src/app/components/navigation/mobile-navigation/mobile-navigation.component.scss
+++ b/src/app/components/navigation/mobile-navigation/mobile-navigation.component.scss
@@ -1,191 +1,165 @@
 @import "../../../../assets/variables";
 $hamburger-width: 30px;
 $hamburger-height: 30px;
-$image-height: 75px;
-$image-width: 100px;
-
+$image-height: 50px;
+$image-width: 75px;
 section#navigation-container {
-
-  top: 0;
-  left: 0;
-  right: 0;
-  position: fixed;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  z-index: 10000;
-
-  div#navigation {
-
-    height: $nav-bar-height;
+    top: 0;
+    left: 0;
+    right: 0;
+    position: fixed;
     display: flex;
-    flex-direction: row;
-    width: 100%;
-    padding:  0 10%;
+    flex-direction: column;
     align-items: center;
-    background-color: white;
-    justify-content: space-between;
-    box-shadow: 7px 7px 21px -5px rgba(0, 0, 0, 0.75);
-
-    &.open {
-      background-color: white !important;
-    }
-
-    span[class*="ion-ios-"] {
-      padding: 0 5px;
-    }
-
-    img#logo {
-      margin-left: 10px;
-      height: $image-height;
-      width: $image-width;
-    }
-
-    div#hamburger-menu {
-      margin: 0 10px;
-      position: relative;
-      width: $hamburger-height;
-      height: $hamburger-width;
-      -webkit-transform: rotate(0deg);
-      -moz-transform: rotate(0deg);
-      -o-transform: rotate(0deg);
-      transform: rotate(0deg);
-      -webkit-transition: 0.5s ease-in-out;
-      -moz-transition: 0.5s ease-in-out;
-      -o-transition: 0.5s ease-in-out;
-      transition: 0.5s ease-in-out;
-      cursor: pointer;
-
-      span {
-        display: block;
-        position: absolute;
-        height: 5px;
+    z-index: 100;
+    div#navigation {
+        height: $nav-bar-height-mobile;
+        display: flex;
+        flex-direction: row;
         width: 100%;
-        background: $main-color;
-        border-radius: 9px;
-        opacity: 1;
-        left: 0;
-        -webkit-transform: rotate(0deg);
-        -moz-transform: rotate(0deg);
-        -o-transform: rotate(0deg);
-        transform: rotate(0deg);
-        -webkit-transition: 0.25s ease-in-out;
-        -moz-transition: 0.25s ease-in-out;
-        -o-transition: 0.25s ease-in-out;
-        transition: 0.25s ease-in-out;
-        -webkit-transform-origin: left center;
-        -moz-transform-origin: left center;
-        -o-transform-origin: left center;
-        transform-origin: left center;
-
-        &:nth-child(1) {
-          top: 0;
-        }
-
-        &:nth-child(2) {
-          top: 10px;
-        }
-
-        &:nth-child(3) {
-          top: 20px;
-        }
-      }
-
-      &.open {
-        span {
-          &:nth-child(1) {
-            -webkit-transform: rotate(45deg);
-            -moz-transform: rotate(45deg);
-            -o-transform: rotate(45deg);
-            transform: rotate(45deg);
-          }
-
-          &:nth-child(2) {
-            width: 0;
-            opacity: 0;
-          }
-
-          &:nth-child(3) {
-            -webkit-transform: rotate(-45deg);
-            -moz-transform: rotate(-45deg);
-            -o-transform: rotate(-45deg);
-            transform: rotate(-45deg);
-          }
-        }
-      }
-    }
-
-    ul {
-      visibility: hidden;
-      overflow: scroll;
-      align-items: center;
-      padding: 0;
-      margin: 0;
-      top: $nav-bar-height;
-      max-height: 0;
-      position: fixed;
-      right: 0;
-      bottom: 0;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      transition: max-height 0.5s ease-in-out;
-
-      &.open {
+        padding: 0 10%;
+        align-items: center;
         background-color: white;
-        opacity: 0.95;
-        visibility: visible;
-        height: 100%;
-        max-height: 100vh;
-      }
-
-      #language{
-        border-top: 1px solid black;
-        width: 50%;
-
-        .selectedLanguage{
-          color: $main-color;
-          font-size: 1.3em;
-        }
-      }
-
-      li {
-        padding: 5% 0;
-        width: 100%;
-        list-style: none;
-        cursor: pointer;
-        text-align: center;
-
-
-
-        mat-icon{
-          text-align: right;
-          margin-right: 5%;
-        }
-
-        a {
-          width: 100%;
-          font-size: 1.2em;
-          color: black;
-          font-weight: bold;
-          text-decoration: none;
-
-          &.selected {
-            color: $main-color;
-            font-weight: bolder;
-          }
-        }
-      }
-      div.sub-menu {
-        overflow: hidden;
-        max-height: 0;
-        transition: max-height 0.5s ease-out;
-        font-size: 0.8em;
-
+        justify-content: space-between;
+        box-shadow: 7px 7px 21px -5px rgba(0, 0, 0, 0.75);
         &.open {
-          max-height: 500px !important;
+            background-color: white !important;
         }
-      }
+        span[class*="ion-ios-"] {
+            padding: 0 5px;
+        }
+        img#logo {
+            margin-left: 10px;
+            height: $image-height;
+            width: $image-width;
+        }
+        div#hamburger-menu {
+            margin: 0 10px;
+            position: relative;
+            width: $hamburger-height;
+            height: $hamburger-width;
+            -webkit-transform: rotate(0deg);
+            -moz-transform: rotate(0deg);
+            -o-transform: rotate(0deg);
+            transform: rotate(0deg);
+            -webkit-transition: 0.5s ease-in-out;
+            -moz-transition: 0.5s ease-in-out;
+            -o-transition: 0.5s ease-in-out;
+            transition: 0.5s ease-in-out;
+            cursor: pointer;
+            span {
+                display: block;
+                position: absolute;
+                height: 5px;
+                width: 100%;
+                background: $main-color;
+                border-radius: 9px;
+                opacity: 1;
+                left: 0;
+                -webkit-transform: rotate(0deg);
+                -moz-transform: rotate(0deg);
+                -o-transform: rotate(0deg);
+                transform: rotate(0deg);
+                -webkit-transition: 0.25s ease-in-out;
+                -moz-transition: 0.25s ease-in-out;
+                -o-transition: 0.25s ease-in-out;
+                transition: 0.25s ease-in-out;
+                -webkit-transform-origin: left center;
+                -moz-transform-origin: left center;
+                -o-transform-origin: left center;
+                transform-origin: left center;
+                &:nth-child(1) {
+                    top: 0;
+                }
+                &:nth-child(2) {
+                    top: 10px;
+                }
+                &:nth-child(3) {
+                    top: 20px;
+                }
+            }
+            &.open {
+                span {
+                    &:nth-child(1) {
+                        -webkit-transform: rotate(45deg);
+                        -moz-transform: rotate(45deg);
+                        -o-transform: rotate(45deg);
+                        transform: rotate(45deg);
+                    }
+                    &:nth-child(2) {
+                        width: 0;
+                        opacity: 0;
+                    }
+                    &:nth-child(3) {
+                        -webkit-transform: rotate(-45deg);
+                        -moz-transform: rotate(-45deg);
+                        -o-transform: rotate(-45deg);
+                        transform: rotate(-45deg);
+                    }
+                }
+            }
+        }
+        ul {
+            visibility: hidden;
+            overflow: scroll;
+            align-items: center;
+            padding: 0;
+            margin: 0;
+            top: $nav-bar-height-mobile;
+            max-height: 0;
+            position: fixed;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            transition: max-height 0.5s ease-in-out;
+            &.open {
+                background-color: white;
+                opacity: 0.95;
+                visibility: visible;
+                height: 100%;
+                max-height: 100vh;
+            }
+            #language {
+                border-top: 1px solid black;
+                width: 50%;
+                .selectedLanguage {
+                    color: $main-color;
+                    font-size: 1.3em;
+                }
+            }
+            li {
+                padding: 5% 0;
+                width: 100%;
+                list-style: none;
+                cursor: pointer;
+                text-align: center;
+                mat-icon {
+                    text-align: right;
+                    margin-right: 5%;
+                }
+                a {
+                    width: 100%;
+                    font-size: 1.2em;
+                    color: black;
+                    font-weight: bold;
+                    text-decoration: none;
+                    &.selected {
+                        color: $main-color;
+                        font-weight: bolder;
+                    }
+                }
+            }
+            div.sub-menu {
+                overflow: hidden;
+                max-height: 0;
+                transition: max-height 0.5s ease-out;
+                font-size: 0.8em;
+                &.open {
+                    max-height: 500px !important;
+                }
+            }
+        }
     }
-  }
 }
