--- a/src/styles.scss
+++ b/src/styles.scss
@@ -217,7 +217,7 @@ h2 {
       img {
         display: inline-block;
         float: right;
-        padding: 0 0 0 10%;
+        margin-right: 20px;
         width: 50%;
         max-height: 25vh;
       }
@@ -225,7 +225,8 @@ h2 {
     &:nth-child(even) {
       img {
         display: inline-block;
-        padding: 0 10% 0 0;
+        margin-left: 20px;
+        margin-right: 0;
       }
     }
     .logo-history {
