--- a/src/app/pages/products/product.page.scss
+++ b/src/app/pages/products/product.page.scss
@@ -76,6 +76,8 @@
           height: auto;
           width: 100%;
           padding: 0;
+          margin-left: 0;
+          margin-right: 0;
         }
       }
 
