--- a/src/app/pages/products/product.page.scss
+++ b/src/app/pages/products/product.page.scss
@@ -22,86 +22,10 @@
     }
   }
 
-  .product-group {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
-    @media (min-width: 768px) {
-      flex-direction: row;
-      justify-content: space-evenly;
-      align-items: center;
-
-      // .product-group-container {
-      //   height: 300px;
-      // }
+  .product-types {
+    h2 {
+      color: $main-color;
     }
-
-
-    .product-group-container {
-      // width: 100%;
-      max-width: 300px;
-      flex-basis: 33.33%;
-      box-shadow: 7px 7px 21px -5px rgba(0, 0, 0, 0.75);
-      display: flex;
-      flex-direction: column;
-      // margin-bottom: 30px;
-      transition: all .2s ease-in-out;
-      position: relative;
-      height: 500px;
-      margin: 0 15px 30px 15px;
-
-      .learn-more-button{
-        display: inline;
-        cursor: pointer;
-        border-radius: 100px;
-        background-color: $main-color;
-        color: white;
-        width: 35%;
-        margin: 15px;
-        padding: 10px;
-        position: relative;
-        .ion-ios-arrow-forward {
-          display: inline-block;
-          transition: left .5s ease-in-out;
-          padding-left: 2px;
-        }
-      }
-
-      .product-group-header {
-        position: relative;
-
-        img {
-          height: auto;
-          width: 100%;
-          padding: 0;
-          margin-left: 0;
-          margin-right: 0;
-        }
-      }
-
-      .product-group-content {
-        padding: 5px;
-        text-align: center;
-        overflow: hidden;
-        text-overflow: ellipsis;
-
-        h2 {
-          margin-top: 0;
-          color: $main-color;
-        }
-
-        p {
-          text-overflow: ellipsis;
-          overflow: hidden;
-        }
-      }
-    }
-  }
-
-  .productsContainer {
-    padding: 2% 0;
   }
 
   ::ng-deep app-slide-side-navigation {
