--- a/src/styles.scss
+++ b/src/styles.scss
@@ -126,6 +126,9 @@ h2 {
   align-items: center;
   padding: 10% 0;
   margin-top: $nav-bar-height;
+  @media screen and (max-width: 768px) {
+    margin-top: $nav-bar-height-mobile;
+  }
   filter: contrast(150%) brightness(100%) grayscale(1px);
   text-align: center;
   &:before {
